<?xml version="1.0"?>
<package format="2">
  <name>structual_motion_level_controller</name>
  <version>0.0.0</version>
  <description>The structual_motion_level_controller package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>choreonoid_viewer</depend>
  <depend>roscpp</depend>
</package>
